wxc/include/ewxw/wxc_glue.h

TBoolInt   wxGrid_AppendRows( TSelf(wxGrid) _obj, int numRows, TBoolInt updateLabels );
void       wxGrid_BeginBatch( TSelf(wxGrid) _obj );
void       wxGrid_CalcCellsExposed( TSelf(wxGrid) _obj, TClass(wxRegion) reg );
void       wxGrid_CalcColLabelsExposed( TSelf(wxGrid) _obj, TClass(wxRegion) reg );
void       wxGrid_CalcRowLabelsExposed( TSelf(wxGrid) _obj, TClass(wxRegion) reg );
TBool      wxGrid_CanEnableCellControl( TSelf(wxGrid) _obj );
void       wxGrid_ClearGrid( TSelf(wxGrid) _obj );
TClass(wxGrid) wxGrid_Create( TClass(wxWindow) _prt, int _id, TRect(_lft,_top,_wdt,_hgt), int _stl );
void       wxGrid_CreateGrid( TSelf(wxGrid) _obj, int rows, int cols, int selmode );
TBoolInt   wxGrid_DeleteCols( TSelf(wxGrid) _obj, int pos, int numCols, TBoolInt updateLabels );
TBoolInt   wxGrid_DeleteRows( TSelf(wxGrid) _obj, int pos, int numRows, TBoolInt updateLabels );
void       wxGrid_DisableCellEditControl( TSelf(wxGrid) _obj );
void       wxGrid_DoEndDragResizeCol( TSelf(wxGrid) _obj );
void       wxGrid_DoEndDragResizeRow( TSelf(wxGrid) _obj );
void       wxGrid_DrawAllGridLines( TSelf(wxGrid) _obj, TClass(wxDC) dc, TClass(wxRegion) reg );
void       wxGrid_DrawCell( TSelf(wxGrid) _obj, TClass(wxDC) dc, int _row, int _col );
void       wxGrid_DrawCellBorder( TSelf(wxGrid) _obj, TClass(wxDC) dc, int _row, int _col );
void       wxGrid_DrawCellHighlight( TSelf(wxGrid) _obj, TClass(wxDC) dc, TClass(wxGridCellAttr) attr );
void       wxGrid_DrawColLabel( TSelf(wxGrid) _obj, TClass(wxDC) dc, int col );
void       wxGrid_DrawColLabels( TSelf(wxGrid) _obj, TClass(wxDC) dc );
void       wxGrid_DrawGridCellArea( TSelf(wxGrid) _obj, TClass(wxDC) dc );
void       wxGrid_DrawGridSpace( TSelf(wxGrid) _obj, TClass(wxDC) dc );
void       wxGrid_DrawHighlight( TSelf(wxGrid) _obj, TClass(wxDC) dc );
void       wxGrid_DrawRowLabel( TSelf(wxGrid) _obj, TClass(wxDC) dc, int row );
void       wxGrid_DrawRowLabels( TSelf(wxGrid) _obj, TClass(wxDC) dc );
void       wxGrid_DrawTextRectangle( TSelf(wxGrid) _obj, TClass(wxDC) dc, TString txt, TRect(x,y,w,h), int horizontalAlignment, int verticalAlignment );
void       wxGrid_EnableCellEditControl( TSelf(wxGrid) _obj, TBool enable );
void       wxGrid_EnableEditing( TSelf(wxGrid) _obj, TBoolInt edit );
void       wxGrid_EndBatch( TSelf(wxGrid) _obj );
int        wxGrid_GetBatchCount( TSelf(wxGrid) _obj );
int        wxGrid_GetNumberCols( TSelf(wxGrid) _obj );
int        wxGrid_GetNumberRows( TSelf(wxGrid) _obj );
TClass(wxGridTableBase) wxGrid_GetTable( TSelf(wxGrid) _obj );
void       wxGrid_GetTextBoxSize( TSelf(wxGrid) _obj, TClass(wxDC) dc, TArrayString(count,lines), TSizeOutVoid(_w,_h) );
void       wxGrid_HideCellEditControl( TSelf(wxGrid) _obj );
TBoolInt   wxGrid_InsertCols( TSelf(wxGrid) _obj, int pos, int numCols, TBoolInt updateLabels );
TBoolInt   wxGrid_InsertRows( TSelf(wxGrid) _obj, int pos, int numRows, TBoolInt updateLabels );
TBool      wxGrid_IsCellEditControlEnabled( TSelf(wxGrid) _obj );
TBool      wxGrid_IsCellEditControlShown( TSelf(wxGrid) _obj );
TBool      wxGrid_IsCurrentCellReadOnly( TSelf(wxGrid) _obj );
TBool      wxGrid_IsEditable( TSelf(wxGrid) _obj );
void       wxGrid_ProcessColLabelMouseEvent( TSelf(wxGrid) _obj, TClass(wxMouseEvent) event );
void       wxGrid_ProcessCornerLabelMouseEvent( TSelf(wxGrid) _obj, TClass(wxMouseEvent) event );
void       wxGrid_ProcessGridCellMouseEvent( TSelf(wxGrid) _obj, TClass(wxMouseEvent) event );
void       wxGrid_ProcessRowLabelMouseEvent( TSelf(wxGrid) _obj, TClass(wxMouseEvent) event );
int        wxGrid_ProcessTableMessage( TSelf(wxGrid) _obj, TClass(wxEvent) evt );
void       wxGrid_SaveEditControlValue( TSelf(wxGrid) _obj );
void       wxGrid_SetSelectionMode( TSelf(wxGrid) _obj, int selmode );
TBoolInt   wxGrid_SetTable( TSelf(wxGrid) _obj, TClass(wxGridTableBase) table, TBoolInt takeOwnership, int selmode );
void       wxGrid_ShowCellEditControl( TSelf(wxGrid) _obj );
int        wxGrid_StringToLines( TSelf(wxGrid) _obj, TStringVoid value, void* lines );
int        wxGrid_XToCol( TSelf(wxGrid) _obj, int x );
void       wxGrid_XYToCell( TSelf(wxGrid) _obj, TPoint(x,y), TPointOut(row,col) );
int        wxGrid_YToRow( TSelf(wxGrid) _obj, int y );
void       wxGrid_NewCalcCellsExposed( TSelf(wxGrid) _obj, TClass(wxRegion) reg, TClassRef(wxGridCellCoordsArray) arr );
void       wxGrid_NewDrawGridCellArea( TSelf(wxGrid) _obj, TClass(wxDC) dc, TClass(wxGridCellCoordsArray) arr );
void       wxGrid_NewDrawHighlight( TSelf(wxGrid) _obj, TClass(wxDC) dc, TClass(wxGridCellCoordsArray) arr );
/* wxGridCellAttr */
TClassDef(wxGridCellAttr)
TClass(wxGridCellAttr)    wxGridCellAttr_Ctor(  );
void       wxGridCellAttr_DecRef( TSelf(wxGridCellAttr) _obj );
void       wxGridCellAttr_GetAlignment( TSelf(wxGridCellAttr) _obj, TSizeOut(hAlign, vAlign) );
void       wxGridCellAttr_GetBackgroundColour( TSelf(wxGridCellAttr) _obj, TClassRef(wxColour) _ref );
TClass(wxGridCellEditor) wxGridCellAttr_GetEditor( TSelf(wxGridCellAttr) _obj, TClass(wxGrid) grid, int row, int col );
void       wxGridCellAttr_GetFont( TSelf(wxGridCellAttr) _obj, TClassRef(wxFont) _ref );
TClass(wxGridCellRenderer)  wxGridCellAttr_GetRenderer( TSelf(wxGridCellAttr) _obj, TClass(wxGrid) grid, int row, int col );
void       wxGridCellAttr_GetTextColour( TSelf(wxGridCellAttr) _obj, TClassRef(wxColour) _ref );
TBool      wxGridCellAttr_HasAlignment( TSelf(wxGridCellAttr) _obj );
TBool      wxGridCellAttr_HasBackgroundColour( TSelf(wxGridCellAttr) _obj );
TBool      wxGridCellAttr_HasEditor( TSelf(wxGridCellAttr) _obj );
TBool      wxGridCellAttr_HasFont( TSelf(wxGridCellAttr) _obj );
TBool      wxGridCellAttr_HasRenderer( TSelf(wxGridCellAttr) _obj );
TBool      wxGridCellAttr_HasTextColour( TSelf(wxGridCellAttr) _obj );
void       wxGridCellAttr_IncRef( TSelf(wxGridCellAttr) _obj );
TBool      wxGridCellAttr_IsReadOnly( TSelf(wxGridCellAttr) _obj );
void       wxGridCellAttr_SetAlignment( TSelf(wxGridCellAttr) _obj, int hAlign, int vAlign );
void       wxGridCellAttr_SetBackgroundColour( TSelf(wxGridCellAttr) _obj, TClass(wxColour) colBack );
void       wxGridCellAttr_SetDefAttr( TSelf(wxGridCellAttr) _obj, TClass(wxGridCellAttr) defAttr );
void       wxGridCellAttr_SetEditor( TSelf(wxGridCellAttr) _obj, TClass(wxGridCellEditor) editor );
void       wxGridCellAttr_SetFont( TSelf(wxGridCellAttr) _obj, TClass(wxFont) font );
void       wxGridCellAttr_SetReadOnly( TSelf(wxGridCellAttr) _obj, TBool isReadOnly );
void       wxGridCellAttr_SetRenderer( TSelf(wxGridCellAttr) _obj, TClass(wxGridCellRenderer) renderer );
void       wxGridCellAttr_SetTextColour( TSelf(wxGridCellAttr) _obj, TClass(wxColour) colText );
/* wxGridCellBoolEditor */
TClassDefExtend(wxGridCellBoolEditor,wxGridCellEditor)
TClass(wxGridCellBoolEditor)   wxGridCellBoolEditor_Ctor(  );
/* wxGridCellCoordsArray */
TClassDef(wxGridCellCoordsArray)
TClass(wxGridCellCoordsArray) wxGridCellCoordsArray_Create();
void       wxGridCellCoordsArray_Delete(TSelf(wxGridCellCoordsArray) _obj);
int        wxGridCellCoordsArray_GetCount(TSelf(wxGridCellCoordsArray) _obj);
void       wxGridCellCoordsArray_Item(TSelf(wxGridCellCoordsArray) _obj, int _idx, TPointOut(_c,_r));
/* wxGridCellEditor */
TClassDefExtend(wxGridCellEditor,wxGridCellWorker)
void       wxGridCellEditor_BeginEdit( TSelf(wxGridCellEditor) _obj, int row, int col, TClass(wxGrid) grid );
void       wxGridCellEditor_Create( TSelf(wxGridCellEditor) _obj, TClass(wxWindow) parent, int id, TClass(wxEvtHandler) evtHandler );
void       wxGridCellEditor_Destroy( TSelf(wxGridCellEditor) _obj );
int        wxGridCellEditor_EndEdit( TSelf(wxGridCellEditor) _obj, int row, int col, TClass(wxGrid) grid );
TClass(wxControl) wxGridCellEditor_GetControl( TSelf(wxGridCellEditor) _obj );
void       wxGridCellEditor_HandleReturn( TSelf(wxGridCellEditor) _obj, TClass(wxEvent) event );
TBool      wxGridCellEditor_IsAcceptedKey( TSelf(wxGridCellEditor) _obj, TClass(wxEvent) event );
TBool      wxGridCellEditor_IsCreated( TSelf(wxGridCellEditor) _obj );
void       wxGridCellEditor_PaintBackground( TSelf(wxGridCellEditor) _obj, TRect(x,y,w,h), TClass(wxGridCellAttr) attr );
void       wxGridCellEditor_Reset( TSelf(wxGridCellEditor) _obj );
void       wxGridCellEditor_SetControl( TSelf(wxGridCellEditor) _obj, TClass(wxControl) control );
void       wxGridCellEditor_SetParameters( TSelf(wxGridCellEditor) _obj, TString params );
void       wxGridCellEditor_SetSize( TSelf(wxGridCellEditor) _obj, TRect(x,y,w,h) );
void       wxGridCellEditor_Show( TSelf(wxGridCellEditor) _obj, TBoolInt show, TClass(wxGridCellAttr) attr );
void       wxGridCellEditor_StartingClick( TSelf(wxGridCellEditor) _obj );
void       wxGridCellEditor_StartingKey( TSelf(wxGridCellEditor) _obj, TClass(wxEvent) event );
/* wxGridCellFloatEditor */
TClassDefExtend(wxGridCellFloatEditor,wxGridCellTextEditor)
TClass(wxGridCellFloatEditor) wxGridCellFloatEditor_Ctor( int width, int precision );