wxcl/src/windows/cffi/wxGrid_cpp.lisp

;;;wxGrid_cpp.lisp
;;;License  : wxWindows License 3.1
;;;Author(s) : Surendra Singhi (surendra@asu.edu) 
;;;Copyright (C) 2005 Surendra Singhi 
;;;See the file LICENSE for information on usage and redistribution.
;;;
;;; $Header$
;;;

(in-package :wxcl-windows)

(defcfun ("wxGridCellCoordsArray_Create" wxGridCellCoordsArray_Create) :pointer)

(defcfun ("wxGridCellCoordsArray_Delete" wxGridCellCoordsArray_Delete) :void
  (_obj :pointer))

(defcfun ("wxGridCellCoordsArray_GetCount" wxGridCellCoordsArray_GetCount) :int
  (_obj :pointer))

(defcfun ("wxGridCellCoordsArray_Item" wxGridCellCoordsArray_Item) :void
  (_obj :pointer)
  (_idx :int)
  (_c :pointer)
  (_r :pointer))

(defcfun ("wxGridCellEditor_IsCreated" wxGridCellEditor_IsCreated) :int
  (_obj :pointer))

(defcfun ("wxGridCellEditor_GetControl" wxGridCellEditor_GetControl) :pointer
  (_obj :pointer))

(defcfun ("wxGridCellEditor_SetControl" wxGridCellEditor_SetControl) :void
  (_obj :pointer)
  (control :pointer))

(defcfun ("wxGridCellEditor_Create" wxGridCellEditor_Create) :void
  (_obj :pointer)
  (parent :pointer)
  (id :int)
  (evtHandler :pointer))

(defcfun ("wxGridCellEditor_SetSize" wxGridCellEditor_SetSize) :void
  (_obj :pointer)
  (x :int)
  (y :int)
  (w :int)
  (h :int))

(defcfun ("wxGridCellEditor_Show" wxGridCellEditor_Show) :void
  (_obj :pointer)
  (show :int)
  (attr :pointer))

(defcfun ("wxGridCellEditor_PaintBackground" wxGridCellEditor_PaintBackground) :void
  (_obj :pointer)
  (x :int)
  (y :int)
  (w :int)
  (h :int)
  (attr :pointer))

(defcfun ("wxGridCellEditor_BeginEdit" wxGridCellEditor_BeginEdit) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (grid :pointer))

(defcfun ("wxGridCellEditor_EndEdit" wxGridCellEditor_EndEdit) :int
  (_obj :pointer)
  (row :int)
  (col :int)
  (grid :pointer))

(defcfun ("wxGridCellEditor_Reset" wxGridCellEditor_Reset) :void
  (_obj :pointer))

(defcfun ("wxGridCellEditor_IsAcceptedKey" wxGridCellEditor_IsAcceptedKey) :int
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxGridCellEditor_StartingKey" wxGridCellEditor_StartingKey) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxGridCellEditor_StartingClick" wxGridCellEditor_StartingClick) :void
  (_obj :pointer))

(defcfun ("wxGridCellEditor_HandleReturn" wxGridCellEditor_HandleReturn) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxGridCellEditor_Destroy" wxGridCellEditor_Destroy) :void
  (_obj :pointer))

(defcfun ("wxGridCellEditor_SetParameters" wxGridCellEditor_SetParameters) :void
  (_obj :pointer)
  (params :pointer))

(defcfun ("wxGridCellTextEditor_Ctor" wxGridCellTextEditor_Ctor) :pointer)

(defcfun ("wxGridCellNumberEditor_Ctor" wxGridCellNumberEditor_Ctor) :pointer
  (min :int)
  (max :int))

(defcfun ("wxGridCellFloatEditor_Ctor" wxGridCellFloatEditor_Ctor) :pointer
  (width :int)
  (precision :int))

(defcfun ("wxGridCellBoolEditor_Ctor" wxGridCellBoolEditor_Ctor) :pointer)

(defcfun ("wxGridCellChoiceEditor_Ctor" wxGridCellChoiceEditor_Ctor) :pointer
  (count :int)
  (choices :pointer)
  (allowOthers :int))

(defcfun ("wxGridCellAttr_Ctor" wxGridCellAttr_Ctor) :pointer)

(defcfun ("wxGridCellAttr_IncRef" wxGridCellAttr_IncRef) :void
  (_obj :pointer))

(defcfun ("wxGridCellAttr_DecRef" wxGridCellAttr_DecRef) :void
  (_obj :pointer))

(defcfun ("wxGridCellAttr_SetTextColour" wxGridCellAttr_SetTextColour) :void
  (_obj :pointer)
  (colText :pointer))

(defcfun ("wxGridCellAttr_SetBackgroundColour" wxGridCellAttr_SetBackgroundColour) :void
  (_obj :pointer)
  (colBack :pointer))

(defcfun ("wxGridCellAttr_SetFont" wxGridCellAttr_SetFont) :void
  (_obj :pointer)
  (font :pointer))

(defcfun ("wxGridCellAttr_SetAlignment" wxGridCellAttr_SetAlignment) :void
  (_obj :pointer)
  (hAlign :int)
  (vAlign :int))

(defcfun ("wxGridCellAttr_SetReadOnly" wxGridCellAttr_SetReadOnly) :void
  (_obj :pointer)
  (isReadOnly :int))

(defcfun ("wxGridCellAttr_SetRenderer" wxGridCellAttr_SetRenderer) :void
  (_obj :pointer)
  (renderer :pointer))

(defcfun ("wxGridCellAttr_SetEditor" wxGridCellAttr_SetEditor) :void
  (_obj :pointer)
  (editor :pointer))

(defcfun ("wxGridCellAttr_HasTextColour" wxGridCellAttr_HasTextColour) :int
  (_obj :pointer))

(defcfun ("wxGridCellAttr_HasBackgroundColour" wxGridCellAttr_HasBackgroundColour) :int
  (_obj :pointer))

(defcfun ("wxGridCellAttr_HasFont" wxGridCellAttr_HasFont) :int
  (_obj :pointer))

(defcfun ("wxGridCellAttr_HasAlignment" wxGridCellAttr_HasAlignment) :int
  (_obj :pointer))

(defcfun ("wxGridCellAttr_HasRenderer" wxGridCellAttr_HasRenderer) :int
  (_obj :pointer))

(defcfun ("wxGridCellAttr_HasEditor" wxGridCellAttr_HasEditor) :int
  (_obj :pointer))

(defcfun ("wxGridCellAttr_GetTextColour" wxGridCellAttr_GetTextColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGridCellAttr_GetBackgroundColour" wxGridCellAttr_GetBackgroundColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGridCellAttr_GetFont" wxGridCellAttr_GetFont) :void
  (_obj :pointer)
  (font :pointer))

(defcfun ("wxGridCellAttr_GetAlignment" wxGridCellAttr_GetAlignment) :void
  (_obj :pointer)
  (hAlign :pointer)
  (vAlign :pointer))

(defcfun ("wxGridCellAttr_GetRenderer" wxGridCellAttr_GetRenderer) :pointer
  (_obj :pointer)
  (grid :pointer)
  (row :int)
  (col :int))

(defcfun ("wxGridCellAttr_GetEditor" wxGridCellAttr_GetEditor) :pointer
  (_obj :pointer)
  (grid :pointer)
  (row :int)
  (col :int))

(defcfun ("wxGridCellAttr_IsReadOnly" wxGridCellAttr_IsReadOnly) :int
  (_obj :pointer))

(defcfun ("wxGridCellAttr_SetDefAttr" wxGridCellAttr_SetDefAttr) :void
  (_obj :pointer)
  (defAttr :pointer))

(defcfun ("wxGrid_Create" wxGrid_Create) :pointer
  (_prt :pointer)
  (_id :int)
  (_lft :int)
  (_top :int)
  (_wdt :int)
  (_hgt :int)
  (_stl :int))

(defcfun ("wxGrid_CreateGrid" wxGrid_CreateGrid) :void
  (_obj :pointer)
  (rows :int)
  (cols :int)
  (selmode :int))

(defcfun ("wxGrid_SetSelectionMode" wxGrid_SetSelectionMode) :void
  (_obj :pointer)
  (selmode :int))

(defcfun ("wxGrid_GetNumberRows" wxGrid_GetNumberRows) :int
  (_obj :pointer))

(defcfun ("wxGrid_GetNumberCols" wxGrid_GetNumberCols) :int
  (_obj :pointer))

(defcfun ("wxGrid_CalcRowLabelsExposed" wxGrid_CalcRowLabelsExposed) :void
  (_obj :pointer)
  (reg :pointer))

(defcfun ("wxGrid_CalcColLabelsExposed" wxGrid_CalcColLabelsExposed) :void
  (_obj :pointer)
  (reg :pointer))

(defcfun ("wxGrid_CalcCellsExposed" wxGrid_CalcCellsExposed) :void
  (_obj :pointer)
  (reg :pointer))

(defcfun ("wxGrid_NewCalcCellsExposed" wxGrid_NewCalcCellsExposed) :void
  (_obj :pointer)
  (reg :pointer)
  (arr :pointer))

(defcfun ("wxGrid_ProcessRowLabelMouseEvent" wxGrid_ProcessRowLabelMouseEvent) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxGrid_ProcessColLabelMouseEvent" wxGrid_ProcessColLabelMouseEvent) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxGrid_ProcessCornerLabelMouseEvent" wxGrid_ProcessCornerLabelMouseEvent) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxGrid_ProcessGridCellMouseEvent" wxGrid_ProcessGridCellMouseEvent) :void
  (_obj :pointer)
  (event :pointer))

(defcfun ("wxGrid_ProcessTableMessage" wxGrid_ProcessTableMessage) :int
  (_obj :pointer)
  (evt :pointer))

(defcfun ("wxGrid_DoEndDragResizeRow" wxGrid_DoEndDragResizeRow) :void
  (_obj :pointer))

(defcfun ("wxGrid_DoEndDragResizeCol" wxGrid_DoEndDragResizeCol) :void
  (_obj :pointer))

(defcfun ("wxGrid_GetTable" wxGrid_GetTable) :pointer
  (_obj :pointer))

(defcfun ("wxGrid_SetTable" wxGrid_SetTable) :int
  (_obj :pointer)
  (table :pointer)
  (takeOwnership :int)
  (selmode :int))

(defcfun ("wxGrid_ClearGrid" wxGrid_ClearGrid) :void
  (_obj :pointer))

(defcfun ("wxGrid_InsertRows" wxGrid_InsertRows) :int
  (_obj :pointer)
  (pos :int)
  (numRows :int)
  (updateLabels :int))

(defcfun ("wxGrid_AppendRows" wxGrid_AppendRows) :int
  (_obj :pointer)
  (numRows :int)
  (updateLabels :int))

(defcfun ("wxGrid_DeleteRows" wxGrid_DeleteRows) :int
  (_obj :pointer)
  (pos :int)
  (numRows :int)
  (updateLabels :int))

(defcfun ("wxGrid_InsertCols" wxGrid_InsertCols) :int
  (_obj :pointer)
  (pos :int)
  (numCols :int)
  (updateLabels :int))

(defcfun ("wxGrid_AppendCols" wxGrid_AppendCols) :int
  (_obj :pointer)
  (numCols :int)
  (updateLabels :int))

(defcfun ("wxGrid_DeleteCols" wxGrid_DeleteCols) :int
  (_obj :pointer)
  (pos :int)
  (numCols :int)
  (updateLabels :int))

(defcfun ("wxGrid_DrawGridCellArea" wxGrid_DrawGridCellArea) :void
  (_obj :pointer)
  (dc :pointer))

(defcfun ("wxGrid_NewDrawGridCellArea" wxGrid_NewDrawGridCellArea) :void
  (_obj :pointer)
  (dc :pointer)
  (arr :pointer))

(defcfun ("wxGrid_DrawGridSpace" wxGrid_DrawGridSpace) :void
  (_obj :pointer)
  (dc :pointer))

(defcfun ("wxGrid_DrawCellBorder" wxGrid_DrawCellBorder) :void
  (_obj :pointer)
  (dc :pointer)
  (_row :int)
  (_col :int))

(defcfun ("wxGrid_DrawAllGridLines" wxGrid_DrawAllGridLines) :void
  (_obj :pointer)
  (dc :pointer)
  (reg :pointer))

(defcfun ("wxGrid_DrawCell" wxGrid_DrawCell) :void
  (_obj :pointer)
  (dc :pointer)
  (_row :int)
  (_col :int))

(defcfun ("wxGrid_DrawHighlight" wxGrid_DrawHighlight) :void
  (_obj :pointer)
  (dc :pointer))

(defcfun ("wxGrid_NewDrawHighlight" wxGrid_NewDrawHighlight) :void
  (_obj :pointer)
  (dc :pointer)
  (arr :pointer))

(defcfun ("wxGrid_DrawCellHighlight" wxGrid_DrawCellHighlight) :void
  (_obj :pointer)
  (dc :pointer)
  (attr :pointer))

(defcfun ("wxGrid_DrawRowLabels" wxGrid_DrawRowLabels) :void
  (_obj :pointer)
  (dc :pointer))

(defcfun ("wxGrid_DrawRowLabel" wxGrid_DrawRowLabel) :void
  (_obj :pointer)
  (dc :pointer)
  (row :int))

(defcfun ("wxGrid_DrawColLabels" wxGrid_DrawColLabels) :void
  (_obj :pointer)
  (dc :pointer))

(defcfun ("wxGrid_DrawColLabel" wxGrid_DrawColLabel) :void
  (_obj :pointer)
  (dc :pointer)
  (col :int))

(defcfun ("wxGrid_DrawTextRectangle" wxGrid_DrawTextRectangle) :void
  (_obj :pointer)
  (dc :pointer)
  (txt :pointer)
  (x :int)
  (y :int)
  (w :int)
  (h :int)
  (horizontalAlignment :int)
  (verticalAlignment :int))

(defcfun ("wxGrid_StringToLines" wxGrid_StringToLines) :int
  (_obj :pointer)
  (value :pointer)
  (lines :pointer))

(defcfun ("wxGrid_GetTextBoxSize" wxGrid_GetTextBoxSize) :void
  (_obj :pointer)
  (dc :pointer)
  (count :int)
  (lines :pointer)
  (width :pointer)
  (height :pointer))

(defcfun ("wxGrid_BeginBatch" wxGrid_BeginBatch) :void
  (_obj :pointer))

(defcfun ("wxGrid_EndBatch" wxGrid_EndBatch) :void
  (_obj :pointer))

(defcfun ("wxGrid_GetBatchCount" wxGrid_GetBatchCount) :int
  (_obj :pointer))

(defcfun ("wxGrid_IsEditable" wxGrid_IsEditable) :int
  (_obj :pointer))

(defcfun ("wxGrid_EnableEditing" wxGrid_EnableEditing) :void
  (_obj :pointer)
  (edit :int))

(defcfun ("wxGrid_EnableCellEditControl" wxGrid_EnableCellEditControl) :void
  (_obj :pointer)
  (enable :int))

(defcfun ("wxGrid_DisableCellEditControl" wxGrid_DisableCellEditControl) :void
  (_obj :pointer))

(defcfun ("wxGrid_CanEnableCellControl" wxGrid_CanEnableCellControl) :int
  (_obj :pointer))

(defcfun ("wxGrid_IsCellEditControlEnabled" wxGrid_IsCellEditControlEnabled) :int
  (_obj :pointer))

(defcfun ("wxGrid_IsCellEditControlShown" wxGrid_IsCellEditControlShown) :int
  (_obj :pointer))

(defcfun ("wxGrid_IsCurrentCellReadOnly" wxGrid_IsCurrentCellReadOnly) :int
  (_obj :pointer))

(defcfun ("wxGrid_ShowCellEditControl" wxGrid_ShowCellEditControl) :void
  (_obj :pointer))

(defcfun ("wxGrid_HideCellEditControl" wxGrid_HideCellEditControl) :void
  (_obj :pointer))

(defcfun ("wxGrid_SaveEditControlValue" wxGrid_SaveEditControlValue) :void
  (_obj :pointer))

(defcfun ("wxGrid_XYToCell" wxGrid_XYToCell) :void
  (_obj :pointer)
  (x :int)
  (y :int)
  (r :int)
  (c :int))

(defcfun ("wxGrid_YToRow" wxGrid_YToRow) :int
  (_obj :pointer)
  (y :int))

(defcfun ("wxGrid_XToCol" wxGrid_XToCol) :int
  (_obj :pointer)
  (x :int))
